--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman dengan Gambar</title>
+    <meta name="description" content="Website kelas IX.D untuk keperluan lain" />
+    <meta name="title" content="IX.D CREATIVE! | Homepage" />
+    <title>IX.D CREATIVE! | Homepage</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
