--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- MAU LIHAT APA? KEPO YA-->
+    <!-- BUKAN GA NIAT TAPII KEJAR WAKTU-->
 </body>
 </html>
